--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -34,7 +34,7 @@
             <button id="menuButton" onclick="toggleSidebar('userClick')" class="text-xl text-gray-700">☰</button>
             <div class="text-xl text-gray-700" id="slugTitle"></div>
             <div class="flex items-center gap-3">
-                <span class="font-medium">Alexey Suzdalenko</span>
+                <span class="font-medium">Froxá</span>
                 <img src="https://avatars.githubusercontent.com/u/120424504?v=4" class="w-8 h-8 rounded-full" />
             </div>
         </header>
