--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -35,7 +35,7 @@
             <div class="text-xl text-gray-700" id="slugTitle"></div>
             <div class="flex items-center gap-3">
                 <span class="font-medium">Froxá</span>
-                <img src="https://avatars.githubusercontent.com/u/120424504?v=4" class="w-8 h-8 rounded-full" />
+                <img src="https://intranet.froxa.net/sga/themes/llood/assets/img/logo2.png" class="w-8 h-8 rounded-full" />
             </div>
         </header>
         <!-- Dashboard content -->
@@ -50,6 +50,7 @@
     <script src="/assets/js/1.router.js"></script>
     <script src="/assets/js/2.menu.js"></script>
     <script src="/assets/js/3.hamburger.js"></script>
+    <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
 
 </body>
 
