--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -13,8 +13,7 @@
     <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
 
-<body class="flex min-h-screen text-gray-800 overflow-x-hidden">
-
+<body>
     <!-- Sidebar -->
     <aside id="sidebar"
         class="w-64 bg-white shadow-md p-4 fixed inset-y-0 left-0 z-50 transform -translate-x-full transition-transform duration-300">
@@ -50,6 +49,8 @@
     <script src="/assets/js/1.router.js"></script>
     <script src="/assets/js/2.menu.js"></script>
     <script src="/assets/js/3.hamburger.js"></script>
+    <script src="/assets/js/4.notifications.js"></script>
+    <script src="/assets/js/5.functions.js"></script>
     <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
 
 </body>
