--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <script src="/assets/css/taiwling.js"></script> 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <meta name="description" content="" />
     <meta name="author" content="Alexey Suzdalenko" />
@@ -12,7 +13,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
-
 <body>
     <!-- Sidebar -->
     <aside id="sidebar"
@@ -33,8 +33,7 @@
             <button id="menuButton" onclick="toggleSidebar('userClick')" class="text-xl text-gray-700">☰</button>
             <div class="text-xl text-gray-700" id="slugTitle"></div>
             <div class="flex items-center gap-3">
-                <span class="font-medium">Froxá</span>
-                <img src="https://intranet.froxa.net/sga/themes/llood/assets/img/logo2.png" class="w-8 h-8 rounded-full" />
+                <img src="/assets/img/logo.png" width="41px" />
             </div>
         </header>
         <!-- Dashboard content -->
