--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -12,6 +12,7 @@
     <link rel="icon" type="image/png" href="/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/style.css" />
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
 <body>
     <!-- Sidebar -->
@@ -51,7 +52,6 @@
     <script src="/assets/js/4.notifications.js"></script>
     <script src="/assets/js/5.functions.js"></script>
     <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
-
 </body>
 
 </html>
