--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -23,6 +23,7 @@
         <nav class="space-y-2" id="menuContainer">
 
         </nav>
+        <a href="/" class="flex items-center gap-2 px-2 py-2 hover:bg-gray-100 rounded-md">👤 Login</a>
     </aside>
 
     <!-- Main content 
