--- a/index.html
+++ b/index.html
@@ -15,25 +15,22 @@
 <body>
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
     <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-      <img class="mx-auto h-10 w-auto" src="https://tailwindcss.com/plus-assets/img/logos/mark.svg?color=indigo&shade=600" alt="Your Company">
-      <h2 class="mt-10 text-center text-2xl/9 font-bold tracking-tight text-gray-900">Sign in to your account</h2>
+      <img class="mx-auto h-10 w-auto" src="/assets/img/logo.png" alt="Froxá">
+      <h2 class="mt-10 text-center text-2xl/9 font-bold tracking-tight text-gray-900">Informes</h2>
     </div>
   
     <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
       <form class="space-y-6" action="#" method="POST">
         <div>
-          <label for="email" class="block text-sm/6 font-medium text-gray-900">Email address</label>
+          <label for="email" class="block text-sm/6 font-medium text-gray-900">Nombre</label>
           <div class="mt-2">
-            <input type="email" name="email" id="email" autocomplete="email" required class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6">
+            <input name="email" id="email" autocomplete="email" required class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6">
           </div>
         </div>
   
         <div>
           <div class="flex items-center justify-between">
-            <label for="password" class="block text-sm/6 font-medium text-gray-900">Password</label>
-            <div class="text-sm">
-              <a href="#" class="font-semibold text-indigo-600 hover:text-indigo-500">Forgot password?</a>
-            </div>
+            <label for="password" class="block text-sm/6 font-medium text-gray-900">Contraseña</label>
           </div>
           <div class="mt-2">
             <input type="password" name="password" id="password" autocomplete="current-password" required class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6">
@@ -41,16 +38,39 @@
         </div>
   
         <div>
-          <button type="submit" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm/6 font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Sign in</button>
+          <input type="button" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm/6 font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" onclick="loginApp()" value="Entrar">
         </div>
       </form>
-  
-      <p class="mt-10 text-center text-sm/6 text-gray-500">
-        Not a member?
-        <a href="#" class="font-semibold text-indigo-600 hover:text-indigo-500">Alexey Suzdalenko</a>
-      </p>
     </div>
   </div>
-  
+    <script src="/assets/js/0.config.js"></script>
+    <script src="/assets/js/4.notifications.js"></script>
+  <script>
+    function loginApp(){
+      let username = document.getElementById('email').value.trim()
+      let password = document.getElementById('password').value.trim()
+      fetch(HTTP_HOST+'froxa/login/?action=login&username='+username+'&password='+password).then(r => r.json()).then(r => {  console.log(r)
+          if(r && r.data && r.data.id > 0){
+            window.localStorage.setItem('username', username);
+            window.localStorage.setItem('password', password);
+            window.localStorage.setItem('role', r.data.role);
+            window.localStorage.setItem('permissions', r.data.permissions);
+            window.location.href = '/dashboard';
+          } else if (r.message){
+             showM(r.message, 'warning');
+          } else {
+            showM('Credenciales incorrectos', 'warning');
+          }
+        }).catch(e => { 
+          showM('e34 '+e, 'error');
+
+        });
+    }
+
+    if(window.localStorage.getItem('username') && window.localStorage.getItem('password')){
+      document.getElementById('email').value = window.localStorage.getItem('username');
+      document.getElementById('password').value = window.localStorage.getItem('password');
+    }
+  </script>
 </body>
 </html>
