--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
   
         <div>
-          <input type="button" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm/6 font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" onclick="loginApp()" value="Entrar">
+          <input type="button" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm/6 font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 hover-a" onclick="loginApp()" value="Entrar">
         </div>
       </form>
     </div>
@@ -72,5 +72,10 @@
       document.getElementById('password').value = window.localStorage.getItem('password');
     }
   </script>
+  <style>
+    .hover-a{
+      cursor: pointer;
+    }
+  </style>
 </body>
 </html>
