--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div>
           <label for="email" class="block text-sm/6 font-medium text-gray-900">Nombre</label>
           <div class="mt-2">
-            <input name="email" id="email" autocomplete="email" required class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6">
+            <input onkeypress="clickInput(event)" name="email" id="email" autocomplete="email" required class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6">
           </div>
         </div>
   
@@ -33,12 +33,12 @@
             <label for="password" class="block text-sm/6 font-medium text-gray-900">Contraseña</label>
           </div>
           <div class="mt-2">
-            <input type="password" name="password" id="password" autocomplete="current-password" required class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6">
+            <input onkeypress="clickInput(event)" type="password" name="password" id="password" autocomplete="current-password" required class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6">
           </div>
         </div>
   
         <div>
-          <input type="button" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm/6 font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 hover-a" onclick="loginApp()" value="Entrar">
+          <input onkeypress="clickInput(event)" type="button" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm/6 font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 hover-a" onclick="loginApp()" value="Entrar">
         </div>
       </form>
     </div>
@@ -46,6 +46,12 @@
     <script src="/assets/js/0.config.js"></script>
     <script src="/assets/js/4.notifications.js"></script>
   <script>
+    function clickInput(event){
+      if (event.key == 'Enter' || event.keyCode == 13) {
+        event.preventDefault(); 
+        loginApp(); 
+      }
+    }
     function loginApp(){
       let username = document.getElementById('email').value.trim()
       let password = document.getElementById('password').value.trim()
@@ -55,6 +61,7 @@
             window.localStorage.setItem('password', password);
             window.localStorage.setItem('role', r.data.role);
             window.localStorage.setItem('permissions', r.data.permissions);
+            window.localStorage.setItem('action_pass', r.data.action_pass);
             window.location.href = '/dashboard';
           } else if (r.message){
              showM(r.message, 'warning');
@@ -63,7 +70,6 @@
           }
         }).catch(e => { 
           showM('e34 '+e, 'error');
-
         });
     }
 
