--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="author" content="Alexey Suzdalenko" />
     <link rel="icon" type="image/png" href="/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="manifest" href="/manifest.json">
 </head>
 <body>
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8 mt-10">
