--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="icon" type="image/png" href="/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#4F46E5" /
 </head>
 <body>
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8 mt-10">
