--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -24,6 +24,13 @@
 
         </nav>
         <a href="/" class="flex items-center gap-2 px-2 py-2 hover:bg-gray-100 rounded-md">👤 Login</a>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div style="text-align: center;">
+            <button id="menuButton" onclick="toggleSidebar('userClick')" class="text-xl text-gray-700">☰</button>
+        </div>
     </aside>
 
     <!-- Main content 
