--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -60,6 +60,9 @@
     <script src="/assets/js/4.notifications.js"></script>
     <script src="/assets/js/5.functions.js"></script>
     <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
+
     <script>
         const originalFetch = window.fetch;
         window.fetch = function(resource, config) {
