--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Informes Froxá</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="/assets/js/vendor/chart.js""></script>
     <meta name="description" content="Froxá" />
     <meta name="author" content="Alexey Suzdalenko" />
     <link rel="icon" type="image/png" href="/favicon.png">
