--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -6,7 +6,7 @@
     <title>Dashboard</title>
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <script src="/assets/css/taiwling.js"></script> 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="/assets/js/vendor/chart.js""></script>
     <meta name="description" content="" />
     <meta name="author" content="Alexey Suzdalenko" />
     <link rel="icon" type="image/png" href="/favicon.png">
