--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Informes Froxá</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="/assets/css/taiwling.js"></script> 
     <script src="/assets/js/vendor/chart.js""></script>
     <meta name="description" content="Froxá" />
     <meta name="author" content="Alexey Suzdalenko" />
