--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -56,6 +56,7 @@
     <script src="/assets/js/4.notifications.js"></script>
     <script src="/assets/js/0.config.js"></script>
     <script src="/assets/js/1.router.js"></script>
+    <script src="/assets/js/2.0.menu.js"></script>
     <script src="/assets/js/2.menu.js"></script>
     <script src="/assets/js/3.hamburger.js"></script>
     <script src="/assets/js/5.functions.js"></script>
