--- a/1.html
+++ b/1.html
@@ -1,8 +1,1 @@
-<iframe title="Libra Edisa Editable" width="50%" height="100%"
-    src="https://app.powerbi.com/view?r=eyJrIjoiNzJmMWZmMTctNjQzYy00M2ZlLTk1Y2EtYzQ4YTdiNTM4YzcxIiwidCI6IjQ4Y2IwMDVlLWI0M2ItNGU4OS04MTY2LTYzOWVlOTE2NDYwMSIsImMiOjl9"
-    frameborder="0" allowFullScreen="true"></iframe>
-
-
-<iframe title="Libra Edisa Editable" width="600" height="373.5"
-    src="https://app.powerbi.com/view?r=eyJrIjoiNzJmMWZmMTctNjQzYy00M2ZlLTk1Y2EtYzQ4YTdiNTM4YzcxIiwidCI6IjQ4Y2IwMDVlLWI0M2ItNGU4OS04MTY2LTYzOWVlOTE2NDYwMSIsImMiOjl9"
-    frameborder="0" allowFullScreen="true"></iframe>
+<iframe title="Dashboard-index" width="100%" height="1111px" src="https://app.powerbi.com/view?r=eyJrIjoiM2VkMzJlNTYtNDgwYS00OTQ2LTg4MTktNDdlZDczNGNmYzVmIiwidCI6IjQ4Y2IwMDVlLWI0M2ItNGU4OS04MTY2LTYzOWVlOTE2NDYwMSIsImMiOjl9" frameborder="0" allowFullScreen="true"></iframe>
