--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -41,11 +41,11 @@
         <header class="bg-white shadow pl-4 pr-4 p-2 flex items-center justify-between">
             <span>
                 <button id="menuButton" onclick="toggleSidebar('userClick')" class="text-xl">☰</button> 
-                <span class="text-xl" id="appTime"></span>
+                <span class="text-xl clblack" id="appTime"></span>
             </span>
             <div class="text-xl text-gray-700" id="slugTitle"></div>
             <div class="flex items-center gap-3">
-                <span class="font-medium" id="userNameApp"></span>
+                <span class="font-medium clblack" id="userNameApp"></span>
                 <img src="/assets/img/logo.png" width="41px" /
             </div>
         </header>
