--- a/index.html
+++ b/index.html
@@ -55,9 +55,15 @@
       }
     }
     function loginApp(){
-      let username = document.getElementById('email').value.trim().toLowerCase()
-      let password = document.getElementById('password').value.trim()
-      fetch(HTTP_HOST+'froxa/login/?action=login&username='+username+'&password='+password).then(r => r.json()).then(r => {  console.log(r)
+      let username = document.getElementById('email').value.trim().toLowerCase();
+      let password = document.getElementById('password').value.trim();
+
+      let formData = new FormData();
+      formData.append('username', username);
+      formData.append('password', password);
+      formData.append('action', 'login');
+
+      fetch(HTTP_HOST+'froxa/login/', {method:'POST', body: formData}).then(r => r.json()).then(r => {  console.log(r)
           if(r && r.data && r.data.id > 0){
             window.localStorage.setItem('username', username);
             window.localStorage.setItem('password', password);
