--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   
         <div>
           <div class="flex items-center justify-between">
-            <label for="password" class="block text-sm/6 font-medium text-gray-900">Contraseña</label>
+            <label for="password" class="block text-sm/6 font-medium text-gray-900">Contraseña</label><span class="hovered" onclick="showPasswordI()">👁️</span>
           </div>
           <div class="mt-2">
             <input onkeypress="clickInput(event)" type="password" name="password" id="password" autocomplete="current-password" required class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6">
@@ -84,6 +84,11 @@
     if(window.localStorage.getItem('username') && window.localStorage.getItem('password')){
       document.getElementById('email').value = window.localStorage.getItem('username');
       document.getElementById('password').value = window.localStorage.getItem('password');
+    }
+    
+    function showPasswordI(){
+      let passwordI = document.getElementById('password');
+      passwordI.type = 'text';
     }
   </script>
   <style>
