--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -65,6 +65,7 @@
     <script src="/assets/js/vendor/xlsx.full.min.js"></script>
     <script src="/assets/js/vendor/jspdf.umd.min.js"></script>
     <script src="/assets/js/vendor/jspdf.plugin.autotable.min.js"></script>
+    <script src="/assets/js/7.alert.email.function.js"></script>
     <!--
         <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
