--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -33,10 +33,6 @@
             <button id="menuButton" onclick="toggleSidebar('userClick')" class="text-xl text-gray-700">☰</button>
         </div>
     </aside>
-
-    <!-- Main content 
-    <input type="text" placeholder="Search..." class="border px-3 py-1 rounded-md w-full max-w-md md:hidden" /> 
-    -->
     <div id="content" class="flex-1 flex flex-col transition-transform duration-300">
         <!-- Top bar -->
         <header class="bg-white shadow pl-4 pr-4 p-2 flex items-center justify-between">
@@ -58,7 +54,7 @@
     <script src="/assets/js/4.notifications.js"></script>
     <script src="/assets/js/0.config.js"></script>
     <script src="/assets/js/1.router.js"></script>
-    <script src="/assets/js/2.0.menu.js"></script>
+    <script src="/assets/js/2.0.menu.js?v=1.0.0"></script>
     <script src="/assets/js/2.menu.js"></script>
     <script src="/assets/js/3.hamburger.js"></script>
     <script src="/assets/js/5.functions.js"></script>
@@ -66,24 +62,5 @@
     <script src="/assets/js/vendor/xlsx.full.min.js"></script>
     <script src="/assets/js/vendor/jspdf.umd.min.js"></script>
     <script src="/assets/js/vendor/jspdf.plugin.autotable.min.js"></script>
-
-    <!--
-        <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
-    -->
-
-    <script>
-        // const originalFetch = window.fetch;
-        // window.fetch = function(resource, config) {
-        //     if (typeof resource === 'string' && resource.endsWith('.js')) {
-        //         const url = new URL(resource, location.origin);
-        //         url.searchParams.set('time', Date.now());
-        //         return originalFetch(url.toString(), config);
-        //     }
-        //     return originalFetch(resource, config);
-        // };
-    </script>
 </body>
-
 </html>
