--- a/balanza/index.html
+++ b/balanza/index.html
@@ -19,11 +19,10 @@
             <select id="tipo_merma" class="w-full mt-1 rounded-md border border-gray-300 px-3 py-2 size18 focus:ring-indigo-500 focus:border-indigo-500 bg-white"></select>
         </div>
         <div class="space-y-5">
-            <div id="inputs_automaticos"></div>
             <br>
             <div>
-                <label class="block size18">Peso manual</label>
-                <input  id="peso_manual" class="w-full mt-1 rounded-md border border-gray-300 px-3 py-2 size18 focus:ring-indigo-500 focus:border-indigo-500" type="number" placeholder="Escribe el peso manual">
+                <label class="block size18">Peso</label>
+                <input  id="peso_manual" class="w-full mt-1 rounded-md border border-gray-300 px-3 py-2 size18 focus:ring-indigo-500 focus:border-indigo-500" type="number" placeholder="Pulsa PRINT o escribe manual">
             </div>
             <div>
                 <button onclick="guardarLineasMerma()" class="w-full bg-indigo-600 text-white size18 py-2 rounded-md hover:bg-indigo-900">Guardar</button>
