--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -62,5 +62,7 @@
     <script src="/assets/js/vendor/xlsx.full.min.js"></script>
     <script src="/assets/js/vendor/jspdf.umd.min.js"></script>
     <script src="/assets/js/vendor/jspdf.plugin.autotable.min.js"></script>
+    <script src="/assets/js/vendor/exceljs.min.js"></script>
+
 </body>
 </html>
