--- a/dashboard/proyeccion-compras/index.html
+++ b/dashboard/proyeccion-compras/index.html
@@ -25,7 +25,7 @@
     <script src="/dashboard/proyeccion-compras/js/2.5-table-stucture.js"></script>
     <script src="/dashboard/proyeccion-compras/js/2.6-table-stucture-fact.js"></script>
     <script src="/dashboard/proyeccion-compras/js/3.0-tabla-top.js"></script>
-
+    <script src="/assets/js/8.loader.js"></script>
 
 </body>
 </html>
