--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -63,6 +63,8 @@
     <script src="/assets/js/vendor/jspdf.umd.min.js"></script>
     <script src="/assets/js/vendor/jspdf.plugin.autotable.min.js"></script>
     <script src="/assets/js/vendor/exceljs.min.js"></script>
+    <script src="/assets/js/8.loader.js"></script>
 
+  
 </body>
 </html>
